# PrimeCrystalVST

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  Pluginprocessor.cpp  README.md  pluginprocessor.h
Prime Crystal.vst3/Contents/Resources/: moduleinfo.json
